[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/TweenGraph/TweenGraph.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/GraphLine/GraphLine.gd" type="Script" id=2]
[ext_resource path="res://Assets/Exo2-Regular.otf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 3 )

[node name="GraphLine" type="HBoxContainer"]
margin_right = 1024.0
margin_bottom = 141.0
alignment = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="CenterContainer" parent="."]
margin_left = 274.0
margin_right = 374.0
margin_bottom = 141.0
rect_min_size = Vector2( 100, 0 )

[node name="LineLabel" type="Label" parent="MarginContainer"]
margin_left = 26.0
margin_top = 58.0
margin_right = 74.0
margin_bottom = 83.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Cubic"

[node name="InContainer" type="VBoxContainer" parent="."]
margin_left = 378.0
margin_right = 468.0
margin_bottom = 141.0

[node name="GraphIn" parent="InContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 90.0
margin_bottom = 75.0
transition_type = 2
ease_type = 0
line_color = Color( 0.34902, 0.85098, 0.54902, 1 )
auto_start = false

[node name="Label" type="Label" parent="InContainer"]
margin_top = 79.0
margin_right = 90.0
margin_bottom = 104.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "In"
align = 1

[node name="OutContainer" type="VBoxContainer" parent="."]
margin_left = 472.0
margin_right = 562.0
margin_bottom = 141.0

[node name="GraphOut" parent="OutContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 90.0
margin_bottom = 75.0
transition_type = 2
ease_type = 1
line_color = Color( 0.85098, 0.45098, 0.34902, 1 )
auto_start = false

[node name="Label" type="Label" parent="OutContainer"]
margin_top = 79.0
margin_right = 90.0
margin_bottom = 104.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Out"
align = 1

[node name="InOutContainer" type="VBoxContainer" parent="."]
margin_left = 566.0
margin_right = 656.0
margin_bottom = 141.0

[node name="GraphInOut" parent="InOutContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 90.0
margin_bottom = 75.0
transition_type = 2
ease_type = 2
line_color = Color( 0.34902, 0.25098, 0.94902, 1 )
auto_start = false

[node name="Label" type="Label" parent="InOutContainer"]
margin_top = 79.0
margin_right = 90.0
margin_bottom = 104.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "In-Out"
align = 1

[node name="OutInContainer" type="VBoxContainer" parent="."]
margin_left = 660.0
margin_right = 750.0
margin_bottom = 141.0

[node name="GraphOutIn" parent="OutInContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 90.0
margin_bottom = 75.0
transition_type = 2
line_color = Color( 0.94902, 0.45098, 0.85098, 1 )
auto_start = false

[node name="Label" type="Label" parent="OutInContainer"]
margin_top = 79.0
margin_right = 90.0
margin_bottom = 104.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Out-In"
align = 1
